<resources>
    <string name="app_name">Register Me</string>
    <string name="map_api_key">AIzaSyArjmbYWTWZhDFFtPOLRLKYwjtBDkOEGrY</string>
    <string name="suc">Success !</string>
    <string name="cancel">Cancel</string>
    <string name="field_req">Field is required</string>
    <string name="inv_email">Invalid email address</string>
    <string name="sign_up2">Sign Up</string>
    <string name="code">code</string>
    <string name="email_exists">Email exists</string>
    <string name="something">Error ! Something went haywire</string>
    <string name="inc_em_pas">Incorrect email or password</string>
    <string name="login">Log in</string>
    <string name="skip">skip</string>
    <string name="user_name">user_name</string>
    <string name="user_password">password</string>
    <string name="user_email">Email (Optional)</string>
    <string name="user_email2">Email </string>

    <string name="user_phone">Phone number</string>
    <string name="register">register</string>
    <string name="si_su">Please Sign in or sign up .</string>
    <string name="home">home</string>
    <string name="new_user">Sign up.</string>
    <string name="wait">wait ...</string>
    <string name="gender">gender</string>
    <string name="notifications">notifications</string>
    <string name="ok">Ok</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="select_a_picture_to_upload">select a picture to upload</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="upload_image">upload image</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="select_language">select language</string>
    <string name="select">select </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_profile">my profile</string>
    <string name="edit_profile">edit profile</string>
    <string name="language_setting">language setting</string>
    <string name="terms_of_use">terms of use</string>
    <string name="about">about us</string>
    <string name="contact_us">Complaints</string>
    <string name="bank_account">bank account</string>
    <string name="logout">logout</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="save">save</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="bank_accounts">bank accounts</string>
    <string name="bank_name">bank name</string>
    <string name="account_name">account name</string>
    <string name="account_iban">account iban</string>
    <string name="account_number">account number</string>
    <string name="perm_image_denied">Permision Images Deined</string>
    <string name="inc_phone_pas">phone or Password InCorrect</string>
    <string name="inc_phone">phone  InCorrect</string>
    <string name="inc_pass">Password InCorrect</string>
    <string name="my_orders">My Orders</string>
    <string name="more">More</string>
    <string name="Create_Cv">Create Cv</string>
    <string name="Edit_cv">Edit Cv</string>
    <string name="name">full name</string>
    <string name="email">email</string>
    <string name="emailjob">email</string>

    <string name="experience">experience</string>
    <string name="qualification">qualification</string>
    <string name="Hand_graduation">Hand graduation</string>
    <string name="Skills">Skills</string>
    <string name="others">others</string>
    <string name="create_email">Create Email</string>
    <string name="jobs">Jobs</string>
    <string name="job">Apply For Job</string>

    <string name="enter_the_name_you_want_to_become_your_email">Enter the name you want to become your email</string>
    <string name="choose_the_type_of_email_you_want">Choose the type of email you want</string>
    <string name="enter_job_link">Enter Job Link</string>
    <string name="no_jobs_to_display">No Jobs To Display</string>
    <string name="applay_for_job">Applay For Job</string>
    <string name="private_sector">Private Sector</string>
    <string name="government_sector">Government Sector</string>
    <string name="cv">CV</string>
    <string name="failed">Failed</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="verfication_code">Verfication Code</string>
    <string name="a_message_will_appear_on_your_phone_by_barely_waiting_your_seconds">A message will appear on your phone by barely waiting your seconds</string>
    <string name="confirm">Confirm</string>
    <string name="user_not_found">User Not Found</string>
    <string name="attach_previous_cv">Attach the previous CV</string>
    <string name="pass_must_more_than_6_digit">PassWord Must More Than 6 digit</string>
    <string name="sucess">Sucess</string>
    <string name="choose_company">Choose Company</string>

    <string name="detials">Detials</string>
    <string name="new_order">New Order</string>
    <string name="your_request_is_being_distributed">Your request is being distributed</string>
    <string name="received">Received</string>
    <string name="been_completed">Been completed</string>
    <string name="order_num">Order Num : </string>
    <string name="order_satus">Order Satus : </string>
    <string name="no_orders_found">No Orders Found</string>

    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="min">MIN</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">Hs</string>
    <string name="yesterday">yesterday</string>
    <string name="day">D</string>
    <string name="my_cv">My Cv</string>
    <string name="my_emails">My Emails</string>
    <string name="my_jobs">My Jobs</string>
    <string name="no_cv_found">No Cv Found</string>
    <string name="choose_handgradauted">Choose HandGraduattion</string>
    <string name="choose_qalified">Choose QualiFicatin</string>
    <string name="choose_Skill">Choose Skill</string>
    <string name="complaint">Complaint</string>
    <string name="image">Image</string>
    <string name="order_sent">Order Sent But You Must Pay First</string>
    <string name="accept">Accept</string>
    <string name="accept_terms_conditions">Accept Terms And Conditions</string>
    <string name="price">Price Of Service</string>
    <string name="do_you_want_add_image">Do you want to attach a CV?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ratig">Ratig</string>
    <string name="rate">Rate Company</string>
    <string name="pay">Pay</string>
    <string name="fetch_your_location_first">Fetch Your Location First</string>
</resources>
