<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/edt_order"
    android:layout_margin="3dp"

    xmlns:android="http://schemas.android.com/apk/res/android">


        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

android:weightSum="3.5"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >
                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/un_checked_circle"
                        />
                    <View
                        android:id="@+id/view1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/black"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:text="@string/new_order"
                    android:layout_marginBottom="10dp"
                    android:lines="2"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"

                    />




            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >
                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/un_checked_circle"
                        />
                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/black"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_2"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:text="@string/your_request_is_being_distributed"
                    android:layout_marginBottom="10dp"
                    android:lines="2"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    />




            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >
                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/un_checked_circle"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/black"/>

                </LinearLayout>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:text="@string/received"
                    android:layout_marginBottom="10dp"
                    android:lines="2"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    />




            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical"
                >

                    <ImageView
                        android:id="@+id/image4"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/un_checked_circle"

                        />



                <TextView
                    android:id="@+id/tv_3"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:text="@string/been_completed"
                    android:layout_marginBottom="10dp"
                    android:lines="2"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    />




            </LinearLayout>



        </LinearLayout>

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll"
        android:layout_marginTop="10dp"
        android:text="@string/order_num"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_goneMarginTop="10dp"

        />

    <TextView
        android:id="@+id/tvOrderNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv"
        app:layout_constraintTop_toTopOf="@id/tv"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"


        />

    <TextView
        android:id="@+id/tvP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv"
        app:layout_constraintTop_toBottomOf="@id/tv"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/order_satus"
        />
    <TextView
        android:id="@+id/tvstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvP"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"


        />
    <Button
        android:id="@+id/btnDetails"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_details"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:text="@string/detials"
        android:textAllCaps="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvstatus"



        />

</androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:layout_marginTop="-10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:background="@drawable/tv_bg"

        />
</LinearLayout>

