<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"

    xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:clickable="false"
                android:longClickable="false"
                android:padding="13dp"
                android:src="@drawable/ic_right_arrow"
                android:tint="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/create_email"
                android:textColor="@color/white"
                android:textSize="16sp"

                />
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="30dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/enter_the_name_you_want_to_become_your_email"
                    android:textColor="@color/black"
                    android:textSize="15sp"

                    />

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/linear_shape_colorprimary"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textColorHint="@color/gray4"
                    android:textCursorDrawable="@drawable/cursor_bg"


                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/linear_shape_colorprimary"
                    android:orientation="horizontal"
                    android:padding="5dp"

                    >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:padding="8dp"
                        android:src="@drawable/ic_lock"
                        android:tint="@color/colorPrimary"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:errorEnabled="false"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorPrimary"


                        >

                        <EditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:layout_gravity="center_vertical"
                            android:background="@color/colorAccent"
                            android:hint="@string/user_password"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray4"
                            android:textSize="14sp"
                            android:textCursorDrawable="@drawable/cursor_bg"

                            />


                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="30dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/choose_the_type_of_email_you_want"
                    android:textColor="@color/black"
                    android:textSize="15sp"

                    />
<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:padding="5dp"
>

</androidx.recyclerview.widget.RecyclerView>









                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_login_bg"
                    android:layout_marginTop="45dp"
                    android:text="@string/send"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"


                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

