<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toTopOf="@id/tv_sign_up"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/tobbackground"
    android:paddingBottom="35dp"
    >
            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
</androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/cons">
                <androidx.constraintlayout.widget.ConstraintLayout

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/linear_shape"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"

                    >

                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_phone"
                        android:layout_gravity="center_vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"

                        android:tint="@color/colorPrimary"

                        />

                    <TextView
                        android:id="@+id/tv_code"
                        android:layout_width="wrap_content"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:textColorHint="@color/gray4"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:hint="@string/code"
                        android:gravity="center"
                        android:singleLine="true"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon"

                        />
                    <View
                        android:id="@+id/view"
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/gray4"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_code"

                        />

                    <EditText
                        android:id="@+id/edt_phone"
                        android:layout_width="0dp"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/white"
                        android:hint="@string/user_phone"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray4"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/view2"
                        app:layout_constraintStart_toEndOf="@id/view"

                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/gray4"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/image_phone_code"
                        />

                    <ImageView
                        android:id="@+id/image_phone_code"
                        android:layout_width="40dp"
                        android:layout_height="37dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_right_arrow"
                        android:tint="@color/gray4"
                        android:padding="12dp"

                        />

                </androidx.constraintlayout.widget.ConstraintLayout>



                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="170dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18sp"

                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:padding="10dp"
        android:text="@string/new_user"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:padding="10dp"
        android:text="@string/skip"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>
